Fix overflow for SVG icons and change mobile nav

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,102 +6,218 @@
 
 /* Large Screens */
 @media screen and (min-width: 991px) {
-	.gd {
-		padding-top: 20px;
-	}
+    .gd {
+        padding-top: 20px;
+    }
 
-	h1 {
-		font-size: 80px !important;
-	}
+    h1 {
+        font-size: 80px !important;
+    }
 
-	h2 {
-		font-size: 40px !important;
-	}
+    h2 {
+        font-size: 40px !important;
+    }
 
-	.header-content-inner > p {
-		font-size: 30px !important;
-	}
+    .header-content-inner > p {
+        font-size: 30px !important;
+    }
 }
 
 /* Small Phones */
 @media (max-width: 340px) {
-	p {
-		font-size: 14px;
-	}
+    p {
+        font-size: 14px;
+    }
 
-	.icon {
-		max-width: 125px !important;
-	}
+    .icon {
+        max-width: 125px !important;
+    }
 }
 
 /* Landscape Phones */
 @media (max-height: 350px) {
-	header {
-		height: 130%;
-	}
+    header {
+        height: 130%;
+    }
 }
 
 /* -------STYLES------- */
-/* TODO: Media Queries for svg {max-width: 200px;} */
 .icon:hover {
-	fill: #00bc8c;
+    fill: #00bc8c;
+    cursor: pointer;
 }
 
 .icon {
-	fill: white;
-	transition: 300ms;
-	transition-timing-function: ease-in-out;
-	-webkit-transition: 300ms;
-	-webkit-transition-timing-function: ease-in-out;
-	max-width: 150px;
+    fill: white;
+    transition: 300ms;
+    transition-timing-function: ease-in-out;
+    -webkit-transition: 300ms;
+    -webkit-transition-timing-function: ease-in-out;
+    max-width: 150px;
 }
 
 .icon:hover {
-	fill: #00bc8c;
+    fill: #00bc8c;
 }
 
 .img-circle {
-	border: 5px #00bc8c solid;
-	margin-bottom: 20px;
+    border: 5px #00bc8c solid;
+    margin-bottom: 20px;
 }
 
 .proj-desc {
-	color: #222;
+    color: #222;
 }
 
 .italics {
-	font-weight: 400;
-	font-style: italic;
+    font-weight: 400;
+    font-style: italic;
 }
 
 .icons > div {
-	margin-bottom: 2.5%;
+    margin-bottom: 2.5%;
 }
 
 /* One-page Site Style */
 #skills {
-	height: auto;
+    height: auto;
 }
 
 #projects {
-	height: auto;
+    height: auto;
 }
 
 #about {
-	height: auto;
+    height: auto;
 }
 
 #contact {
-	height: auto;
+    height: auto;
 }
 
 /* Bootstrap Customizations */
 .row {
-  	margin-right: 0px !important; 
-  	margin-left: 0px !important;
+    margin-right: 0px !important; 
+    margin-left: 0px !important;
 }
 
-.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
-  padding-right: 0px !important;
-  padding-left: 0px !important;
+.no-padding > .container-fluid {
+    padding: 0;
 }
+
+.col-xs-1,
+.col-sm-1,
+.col-md-1,
+.col-lg-1,
+.col-xs-2,
+.col-sm-2,
+.col-md-2,
+.col-lg-2,
+.col-xs-3,
+.col-sm-3,
+.col-md-3,
+.col-lg-3,
+.col-xs-4,
+.col-sm-4,
+.col-md-4,
+.col-lg-4,
+.col-xs-5,
+.col-sm-5,
+.col-md-5,
+.col-lg-5,
+.col-xs-6,
+.col-sm-6,
+.col-md-6,
+.col-lg-6,
+.col-xs-7,
+.col-sm-7,
+.col-md-7,
+.col-lg-7,
+.col-xs-8,
+.col-sm-8,
+.col-md-8,
+.col-lg-8,
+.col-xs-9,
+.col-sm-9,
+.col-md-9,
+.col-lg-9,
+.col-xs-10,
+.col-sm-10,
+.col-md-10,
+.col-lg-10,
+.col-xs-11,
+.col-sm-11,
+.col-md-11,
+.col-lg-11,
+.col-xs-12,
+.col-sm-12,
+.col-md-12,
+.col-lg-12 {
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+}
+
+
+.btn-primary:hover {
+    background-color: #fff !important;
+    color: #222 !important;
+}
+
+/* Nav */
+/* ANIMATED X */
+html .navbar-toggle {
+    border: none;
+    background: transparent !important;
+}
+
+html .navbar-toggle:hover {
+    background: transparent !important;
+}
+
+html .navbar-toggle .icon-bar {
+    width: 22px;
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
+}
+
+.navbar-toggle.x .icon-bar:nth-of-type(2) {
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    -webkit-transform-origin: 10% 10%;
+    -ms-transform-origin: 10% 10%;
+    transform-origin: 10% 10%;
+}
+
+.navbar-toggle.x .icon-bar:nth-of-type(3) {
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
+
+.navbar-toggle.x .icon-bar:nth-of-type(4) {
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-transform-origin: 10% 90%;
+    -ms-transform-origin: 10% 90%;
+    transform-origin: 10% 90%;
+}
+
+/* ANIMATED X COLLAPSED */
+.navbar-toggle.x.collapsed .icon-bar:nth-of-type(2) {
+    -webkit-transform: rotate(0);
+    -ms-transform: rotate(0);
+    transform: rotate(0);
+}
+
+.navbar-toggle.x.collapsed .icon-bar:nth-of-type(3) {
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+
+.navbar-toggle.x.collapsed .icon-bar:nth-of-type(4) {
+    -webkit-transform: rotate(0);
+    -ms-transform: rotate(0);
+    transform: rotate(0);
+}
+/* END ANIMATED X */
